--- a/server-adapters/pom.xml
+++ b/server-adapters/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.jboss.resteasy</groupId>
         <artifactId>resteasy-jaxrs-all</artifactId>
-        <version>4.0.0-SNAPSHOT</version>
+        <version>4.0.0-6459c4c</version>
     </parent>
     <name>RESTEasy Http Adapter Plugins</name>
     <description/>
